move /account/register to /register, because the page can be hashable

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -26,7 +26,7 @@
           </label>
         </div>
         <button class="mb-3 w-100 btn btn-lg btn-primary my-pink-button" type="submit">Войти</button>
-        <a class="w-100 btn btn-lg my-outline-button mb-3" href="/account/register{{'?page=' + active_page if active_page else ''}}" >Регистрация</a>
+        <a class="w-100 btn btn-lg my-outline-button mb-3" href="/register{{'?page=' + active_page if active_page else ''}}" >Регистрация</a>
         <small>Нажимая кнопку Войти, Вы подтверждаете согласие с <a href="/politic">Политикой сайта</a></small>
       </form>
     </div>
